# MLOps_System_Vibe

./: README.md  pyproject.toml  test_scientist.py
notebooks/: test_agent.ipynb
src/agents/specialized/: scientist_agent.py  validator_agent.py
src/backend/: main.py
src/backend/core/: config.py
src/backend/services/: agent_service.py
src/core/tools/: physics_tools.py
